--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -12,6 +12,42 @@
     <%= f.text_field :nickname,class:"form-control mb-4 input-lg" %>
   </div>
 
+
+  <div class="d-flex">
+    <div class="form-group text-left h3 mt-5 mr-4">
+      <%= f.label :family_name ,class:"mb-4"%>
+      <%= f.text_field :family_name,class:"form-control mb-4 input-lg",placeholder: "例) 山田" %>
+    </div>
+
+    <div class="form-group text-left h3 mt-5 ">
+      <%= f.label :first_name ,class:"mb-4"%>
+      <%= f.text_field :first_name,class:"form-control mb-4 input-lg",placeholder: "例) 太郎" %>
+    </div>
+  </div>
+
+  <div class="d-flex">
+    <div class="form-group text-left h3 mt-5 mr-4">
+      <%= f.label :family_name_kana ,class:"mb-4"%>
+      <%= f.text_field :family_name_kana,class:"form-control mb-4 input-lg",placeholder: "例) ヤマダ" %>
+    </div>
+
+    <div class="form-group text-left h3 mt-5">
+      <%= f.label :first_name_kana,class:"mb-4"%>
+      <%= f.text_field :first_name_kana,class:"form-control mb-4 input-lg",placeholder: "例) タロウ" %>
+    </div>
+  </div>
+
+  <div class="form-group text-left h3 mt-5 mb-4">
+    <%= f.label :birthday %>
+   <%= f.date_select(
+        :birthday ,
+        use_month_numbers: true,
+        start_year: 1930,
+        end_year: (Time.now.year - 18),
+        default: Date.new(1989, 1, 1),
+        date_separator: '/') %>
+  </div>
+
   <div class="form-group text-left h3 mt-5">
     <%= f.label :email ,class:"mb-4"%>
     <%= f.email_field :email, autofocus: true, autocomplete: "email",class:"form-control mb-4 input-lg" %>
