いいね機能の実装

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -30,3 +30,7 @@ overflow: auto;
   max-width:100%;
   align-items: center;
 }
+.index-user-name{
+  align-items: center;
+  justify-content: center;
+}
