--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,18 +3,7 @@
 </div>
 
 <div class="container d-flex">
-
-  <div class="side-bar ">
-    <div class="side-content-head">
-      <%= link_to root_path do%>
-        <i class="fa fa-home fa-2x ml-2"><span class="ml-3">ホーム</span></i>
-      <% end %>
-    </div>
-    <div class="side-content">
-      <%= link_to "投 稿 す る",new_portfolio_path,class:"btn btn-outline-primary mt-5 btn-lg ml-2"%>
-    </div>
-  </div>
-
+  <%= render 'shared/side-bar'%>
   <div class="contents">
     <% if @portfolios.present?%>
       <% @portfolios.each do |portfolio|%>
