お気に入りに登録したサイトの表示

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,8 +11,11 @@
           <%= link_to "Home",root_path,class:"nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "ポートフォリオの投稿",new_portfolio_path,class:"nav-link disabled"%>
-
+          <% if user_signed_in?%>
+            <%= link_to "ログアウト",destroy_user_session_path,method: :delete,class:"nav-link disabled"%>
+          <% else%>
+            <%= link_to "ログイン",new_user_session_path,class:"nav-link disabled" %>
+          <% end%>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
