--- a/app/views/shared/_like.html.erb
+++ b/app/views/shared/_like.html.erb
@@ -1,5 +1,5 @@
 <div class="like-link" id="like-link-<%= portfolio.id %>">
-  <% if current_user.likes.find_by(portfolio_id: portfolio.id) %>
+  <% if user_signed_in? && current_user.likes.find_by(portfolio_id: portfolio.id) %>
     <%= link_to unlike_path(portfolio.id), method: :delete, remote: true do %>
       <div class = "iine__button">❤️ <span class="ml-1"><%= portfolio.likes.count %></span></div>
     <% end %>
